# node_arena

./: -  .gitignore  .init  2026_1_16_44_16.json  CMakeLists.txt  INSTALL.sh  requirements.txt  run_alpha_zero.sh
data/: chinese_checkers_4_4_3_eval.yaml  chinese_checkers_4_4_3_train.yaml  evaluate_alpha_zero_template.yaml  supervised_learning_conf_template.yaml  train_alpha_zero_template.yaml
include/: constants.hpp  game.h  game.hpp  player.hpp  state.h  state.hpp
include/games/chinese_checkers/: chinese_checkers.hpp  chinese_checkers_state.hpp
include/games/connect_four/: connect_four.hpp  connect_four_state.hpp
include/games/othello/: othello.hpp  othello_state.hpp
include/games/tic_tac_toe/: tic_tac_toe.hpp  tic_tac_toe_state.hpp
python/: alpha_zero.yaml  alpha_zero_data_generator.py  alpha_zero_learner.py  alpha_zero_replay_buffer.py  c4_conf.yaml  configs.py  configure_logging.py  data_reader.py  eval_alpha_zero.yaml  evaluate_alpha_zero.py  evaluate_model.py  evaluate_model.yaml  factory.py  game_protocols.py  parallel_play.py  parallel_play.py.bak  play.py  plot_alpha_zero.py  plot_mcts_test.py  replay_buffer.py  run_alpha_zero.py  test_array.py  test_config.yaml  test_ml.py  test_mp.py  test_shared_mem.py  test_wrapper.py  train_alpha_zero.py  train_supervised_learning.py  training_conf.yaml
python/factories/: game_factory.py  human_player_factory.py  mcts_player_factory.py  player_factory.py  random_player_factory.py
python/factories/player_factories/: mcts_player_factory.py  puct_player_factory.py
python/models/: chinese_checkers_nn.py  connect_four_nn.py  othello_nn.py  tic_tac_toe_nn.py
python/players/: human_player.py  mcts_helpers.py  mcts_player.py  player_protocols.py  puct_inference_server.py  puct_player.py  random_player.py  uct_player.py
python/solvers/: dfs_solver.py
python/utils/: seed_gen.py
python/wrappers/: connect_four_wrapper.pyi  tic_tac_toe_wrapper.pyi
src/: CMakeLists.txt  chinese_checkers_test.cpp  chinese_checkers_wrapper.cpp  connect_four_test.cpp  connect_four_wrapper.cpp  main.cpp  othello_test.cpp  othello_wrapper.cpp  tic_tac_toe.cpp  tic_tac_toe.h  tic_tac_toe_state.cpp  tic_tac_toe_state.h  tic_tac_toe_wrapper.cpp
src/games/: CMakeLists.txt
src/games/chinese_checkers/: CMakeLists.txt  chinese_checkers.cpp  chinese_checkers_state.cpp
src/games/connect_four/: CMakeLists.txt  connect_four.cpp  connect_four_state.cpp
src/games/othello/: CMakeLists.txt  othello.cpp  othello_state.cpp
src/games/tic_tac_toe/: CMakeLists.txt  tic_tac_toe.cpp  tic_tac_toe_state.cpp
